--- a/run.conf
+++ b/run.conf
@@ -77,9 +77,9 @@ scaler=normal2x
 #   cycleup: Amount of cycles to decrease/increase with keycombo.(CTRL-F11/CTRL-F12)
 # cycledown: Setting it lower than 100 will be a percentage.
 
-core=auto
+core=simple
 cputype=auto
-cycles=auto
+cycles=fixed 10000
 cycleup=10
 cycledown=20
 
