--- a/run.conf
+++ b/run.conf
@@ -25,11 +25,11 @@ fullscreen=false
 fulldouble=false
 fullresolution=original
 windowresolution=original
-output=opengl
+output=overlay
 autolock=true
-sensitivity=100
-waitonerror=true
-priority=highest,highest
+sensitivity=20
+waitonerror=false
+priority=highest,normal
 mapperfile=mapper-0.74.map
 usescancodes=true
 
@@ -46,7 +46,7 @@ usescancodes=true
 language=
 machine=svga_s3
 captures=capture
-memsize=16
+memsize=4
 
 [render]
 # frameskip: How many frames DOSBox skips before drawing one.
@@ -56,7 +56,7 @@ memsize=16
 #            Possible values: none, normal2x, normal3x, advmame2x, advmame3x, advinterp2x, advinterp3x, hq2x, hq3x, 2xsai, super2xsai, supereagle, tv2x, tv3x, rgb2x, rgb3x, scan2x, scan3x.
 
 frameskip=0
-aspect=false
+aspect=true
 scaler=normal2x
 
 [cpu]
@@ -77,9 +77,9 @@ scaler=normal2x
 #   cycleup: Amount of cycles to decrease/increase with keycombo.(CTRL-F11/CTRL-F12)
 # cycledown: Setting it lower than 100 will be a percentage.
 
-core=simple
+core=normal
 cputype=auto
-cycles=fixed 10000
+cycles=max # fixed 10000
 cycleup=10
 cycledown=20
 
@@ -92,7 +92,7 @@ cycledown=20
 # prebuffer: How many milliseconds of data to keep on top of the blocksize.
 
 nosound=false
-rate=44100
+rate=48000
 blocksize=1024
 prebuffer=20
 
@@ -105,7 +105,7 @@ prebuffer=20
 #               See the README/Manual for more details.
 
 mpu401=intelligent
-mididevice=default
+mididevice=none
 midiconfig=
 
 [sblaster]
@@ -170,9 +170,9 @@ ultradir=C:\ULTRASND
 #    disney: Enable Disney Sound Source emulation. (Covox Voice Master and Speech Thing compatible).
 
 pcspeaker=true
-pcrate=44100
+pcrate=48000
 tandy=auto
-tandyrate=44100
+tandyrate=48000
 disney=true
 
 [joystick]
@@ -215,8 +215,8 @@ buttonwrap=false
 # serial4: see serial1
 #          Possible values: dummy, disabled, modem, nullmodem, directserial.
 
-serial1=dummy
-serial2=dummy
+serial1=disabled
+serial2=disabled
 serial3=disabled
 serial4=disabled
 
